--- a/simpledocs/package.json
+++ b/simpledocs/package.json
@@ -7,7 +7,12 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:simpledocs": "node dist/simpledocs/server/server.mjs"
+    "serve:ssr:simpledocs": "node dist/simpledocs/server/server.mjs",
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:e2e": "cypress run --e2e",
+    "cypress:component":"cypress run --component"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "marked": "^9.1.6",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.2.2"
   }
