--- a/simpledocs/package.json
+++ b/simpledocs/package.json
@@ -13,11 +13,12 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "cypress:e2e": "cypress run --e2e",
-    "cypress:component":"cypress run --component"
+    "cypress:component": "cypress run --component"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.0",
+    "@angular/cdk": "^17.0.4",
     "@angular/common": "^17.0.0",
     "@angular/compiler": "^17.0.0",
     "@angular/core": "^17.0.0",
